# archivist2-bot

./: .gitignore  Cargo.toml
src/: archivist.rs  authenticate.rs  bot_action.rs  categorizer.rs  commit_messages.rs  config.rs  git.rs  main.rs  message_cache.rs  path_matcher.rs  publisher.rs
