[package]
name = "archivist-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
git2 = "0.17.1"
serde_json = "1.0.96"
serde = "1.0.163"
regex = "1.8.1"
reqwest = "0.11.18"
async-trait = "0.1.68"
chrono = "0.4.24"
env_logger = "0.10.0"
syncmap = "0.1.3"
